# lora-rag-clinical

./: .env.example  .gitignore  IDEAS.md  PLAN.md  README.md  data_audit.md  preregistration.md  pyproject.toml  refs.md
.claude/: settings.local.json
configs/: base.yaml  lora_a.yaml  lora_a_prime.yaml  lora_b.yaml  retrieval.yaml
data/: .gitkeep  bioasq_splits.json  mirage_subset_ids.json  test_set_hash.json
data/synthetic/: lora_b_pilot.jsonl  lora_b_pilot_corrected.jsonl
data/training/: lora_a_train.jsonl
notebooks/: 00_data_inspection.ipynb  01_retrieval_smoke_test.ipynb  02_lora_a_kaggle.ipynb  02b_lora_a_prime_kaggle.ipynb  03_lora_b_kaggle.ipynb  04_results_analysis.ipynb
paper/: main.tex  refs.bib
paper/figures/: .gitkeep
paper/tables/: .gitkeep
results/: .gitkeep
scripts/: build_index.sh  m4a_calibration.py  m4a_diagnostics.py  m4a_inspect_rejections.py  m4a_pilot.py  m4a_refilter.py  m4b_generation.py  m4b_generation_concurrent.py  reproduce.sh  run_inference.sh
scripts/m5_investigations/: insufficient_evidence.py
src/: __init__.py
src/analysis/: __init__.py  figures.py  stratify.py  tables.py
src/annotation/: __init__.py  app.py  schema.py
src/data/: __init__.py  bioasq.py  corpus.py  mirage.py  pubmedqa.py  splits.py
src/eval/: __init__.py  bootstrap.py  faithfulness.py  interaction_test.py  metrics.py  power_simulation.py
src/inference/: __init__.py  cells.py  generate.py
src/retrieval/: __init__.py  eval_retrieval.py  index.py  oracle.py  retrieve.py
src/synthetic/: __init__.py  build_examples.py  filters.py  lora_b_generator.py
src/training/: __init__.py  common.py  distractors.py  lora_a.py  lora_a_prime.py  lora_b.py  materialize.py  prompts.py  synthetic.py  synthetic_filter.py  synthetic_prompts.py
tests/: __init__.py  conftest.py  test_distractors.py  test_metrics.py  test_prompts.py  test_retrieval.py  test_splits.py
