[project]
name = "lora-rag-clinical"
version = "0.1.0"
description = "LoRA × Retrieval Interaction on Clinical Evidence Interpretation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    # Core ML (pins aligned with Unsloth requirements)
    "torch>=2.1.0",
    "transformers>=4.46.0",  # Unsloth requires >=4.46
    "datasets>=2.16.0",
    "accelerate>=0.25.0",
    "peft>=0.14.0",          # Unsloth requires >=0.14
    "bitsandbytes>=0.43.0",  # Unsloth requires >=0.43
    # Retrieval
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    # API clients
    "anthropic>=0.18.0",
    "huggingface-hub>=0.20.0",
    # Experiment tracking
    "wandb>=0.16.0",
    # Evaluation
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    # Annotation UI
    "streamlit>=1.29.0",
    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    # Utilities
    "tqdm>=4.66.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "trl>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
]
training = [
    # Unsloth for efficient QLoRA - install separately due to CUDA requirements
    # pip install "unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
